# bamlab

./: bam.js
analyzer/: CMakeLists.txt
analyzer/src/: main.cpp
calculator/: CMakeLists.txt
calculator/src/: main.cpp
libcore/: CMakeLists.txt
libcore/include/core/: expr.h  stats.h
libcore/src/: expr.cpp  stats.cpp
libcore/test/: test_expr.cpp  test_stats.cpp
src/: test.c
test1/: test1.c
test2/: test2.c
test3/: test3.c
tstest/: package-lock.json  package.json
tstest/src/: main.ts
